<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CorrectionActivity">
    <TextView
            android:text="@string/lblTitle_activity_correction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblTitle"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lblDescription"/>
    <TextView
            android:text="@string/lblDescription_activity_correction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblDescription"
            android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingRight="20dp" android:paddingBottom="10dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/lblTitle"
            app:layout_constraintBottom_toTopOf="@+id/lblInputTemperature"/>
    <TextView
            android:text="@string/lblInputTemperature_activity_correction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblInputTemperature"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/lblDescription"
            app:layout_constraintBottom_toTopOf="@+id/txtInputTemperature"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:ems="10"
            android:id="@+id/txtInputTemperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/lblInputTemperature"
            app:layout_constraintBottom_toTopOf="@+id/lblInputDegree"
            android:text="@string/txtInputTemperature_activity_correction" android:importantForAutofill="no"
            android:hint="@string/lblInputTemperature_activity_correction"/>
    <TextView
            android:text="@string/lblInputDegree_activity_correction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblInputDegree"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/txtInputTemperature"
            app:layout_constraintBottom_toTopOf="@+id/txtInputDegree"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:ems="10"
            android:id="@+id/txtInputDegree"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/lblInputDegree"
            app:layout_constraintBottom_toTopOf="@+id/btnCorrection"
            android:text="@string/txtInputDegree_activity_correction" android:importantForAutofill="no"
            android:hint="@string/lblInputDegree_activity_correction"/>
    <Button
            android:text="@string/btnCorrectionOK_activity_correction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnCorrection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/txtInputDegree"
            app:layout_constraintBottom_toTopOf="@+id/txtResult"/>
    <!-- Result -->
    <TextView
            android:text="@string/lblResult_activity_correction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblResult"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/btnCorrection"
            app:layout_constraintBottom_toTopOf="@+id/txtResult" android:textColor="@color/colorPrimaryDark"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:ems="10"
            android:id="@+id/txtResult"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/lblResult"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/txtResult_activity_correction" android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorPrimaryDark"
            tools:ignore="LabelFor"/>
</android.support.constraint.ConstraintLayout>