<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/logo" android:id="@+id/imageViewLogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/imageViewLogo_activity_main"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.0"
            android:scaleType="centerInside" android:cropToPadding="false" android:adjustViewBounds="true"/>
    <Button
            android:text="@string/btnSolution_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnSolution"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
            app:layout_constraintBottom_toTopOf="@+id/btnCorrection" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/btnCorrection_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnCorrection"
            app:layout_constraintTop_toBottomOf="@+id/btnSolution" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
    />
</android.support.constraint.ConstraintLayout>